# nirs4all

./: .dockerignore  .flake8  .gitignore  .readthedocs.yaml  .tmp_repro_original_template.py  .zenodo.json  ADR-17_LEGACY_DROP_HANDOFF.md  AGENTS.md  CHANGELOG.md  CLA.md  CLAUDE.md  CLA_FR.md  CLI_INSTALLATION_TESTING.md  CONTRIBUTING.md  CONTRIBUTING_FR.md  CRITICAL_ISSUES.md  DEV_PREDICT.MD  Dockerfile  ENHANCED_IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  LICENSE  LICENSING.md  LICENSING_FR.md  MODEL_NAMING_REFACTORING_SUMMARY.md  PREDICTION_IMPLEMENTATION_PLAN.md  PREDICTION_IMPLEMENTATION_SUMMARY.md  README.md  README_LICENSE.md  README_LICENSE_FR.md  RECOVERY_ROADMAP.md  REFACTORING_ANALYSIS.md  REFACTORING_SUMMARY.md  Roadmap.md  SECURITY.md  SERIALIZATION_REFACTORING.md  TEST_COVERAGE_MAP_TEMPLATE.md  TEST_REORGANIZATION_PLAN.md  THIRD_PARTY_NOTICES.md  THIRD_PARTY_NOTICES_FR.md  TODO  (+30 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: CI.yaml  codeql.yml  dependency-review.yml  deploy.yaml  docs-quality.yml  docs.yml  examples.yml  methods-installed.yml  pre-publish.yml  publish.yml  shared-test-and-docs.yml  test.yml  version-guard.yml
.playwright-mcp/: page-2026-05-04T16-48-37-356Z.yml  page-2026-05-12T16-04-25-751Z.yml
LICENSES/: COMMERCIAL-LICENSE.md  COMMERCIAL-LICENSE_FR.md
_discarded/: CONTEXT_MANAGEMENT_SUMMARY.md
_discarded/core_discarded/: config.py
_discarded/data/: spectraset_grok.py
archives/webapp_mockup_backup/: README.md  analysis.html  dashboard.html  index.html  pipeline.html  (+2 more)
bench/: 1_master_results.csv  Backlog  MASTER_CSV_FREEZE.md  MASTER_CSV_HASH.txt  MODELES_BENCHMARK_RECAP.md  PLAN_REPRISE_2026-05.md  Q20B_analysis.py  Q20_analysis.py  README.md  SYNC.md  Synthesis_Objectives.md  ViTnirs  __init__.py  batch_regression.py  benchmark_synthesis.md  build_benchmark_synthesis.py  build_dashboard.py  build_run_dashboard.py  custom_NN.py  dashboard_template.html  export_benchmark_scenarios.py  master_results_classif.csv  model_exploration_review.md  nirs_synthetic_pfn  nitro_regression.py  old_pls.py  plot_benchmark_master.py  spectral_latent_features.py  study_full_proto.py  study_method.md  study_proto_1.py  study_proto_2.py  study_report.py  study_tabpfn_config.py  synthetic  tabpfn_config.py  tabpfn_run.py  test_import.py
conda-forge/: meta.yaml
deprec/: README_DEPRECATED.md  config_examples.py  features_demo.ipynb  nested_cv_example.py  test_chart_controller.ipynb  test_chart_updates.py  test_parameter_strategies.py
docs/: ANALYSIS_DATASET_MODULE.md  ARCHITECTURE_BEFORE_AFTER.md  BINNING_AUGMENTATION_ANALYSIS.md  BINNING_AUGMENTATION_ARCHITECTURE.md  BINNING_AUGMENTATION_DESIGN.md  BINNING_AUGMENTATION_README.md  BINNING_AUGMENTATION_ROADMAP.md  CLI_WORKSPACE_COMMANDS.md  COMPLETE_IMPLEMENTATION_GUIDE.md  CONTROLLER_ARCHITECTURE_DIAGNOSIS.md  CROSS_DATASET_ANALYSIS.md  DATA_MODULE_REVIEW.md  DEV_PREDICT.MD  DIRECTORY_ARCHITECTURE_PROPOSALS.md  DOCUMENTATION_AUDIT.md  EXAMPLES_REORGANIZATION.md  External_api.MD  FOLDER_STRUCTURE_REFACTORING.md  GROUP_SPLIT_QUICK_REFERENCE.md  MANIFEST_ARCHITECTURE.md  MERGE_SERIALIZATION.txt  METADATA_USAGE.md  OUTPUTS_VS_ARTIFACTS.md  PIPELINE_REFACTORING_ANALYSIS.md  PIPELINE_SYNTAX_COMPLETE_GUIDE.md  PLS_Study.md  PREDICTION_IMPLEMENTATION_SUMMARY.md  PREDICTION_RESULTS_LIST.md  Preprocessing.md  Project_structure.md  QUICK_REFERENCE_PREDICTION_RESULTS_LIST.md  RESAMPLER_IMPLEMENTATION_SUMMARY.md  RESAMPLER_QUICK_REF.md  RUN_BASED_ARCHITECTURE.md  RUN_BASED_ARCHITECTURE_SUMMARY.md  SAMPLE_AUGMENTATION.md  SAMPLE_AUGMENTATION_DESIGN.md  SAMPLE_AUGMENTATION_IMPLEMENTATION_SUMMARY.md  SAMPLE_AUGMENTATION_QUICK_REFERENCE.md  SERIALIZATION_EXECUTIVE_SUMMARY.md  (+34 more)
examples/: IMPLEMENTATION_SUMMARY.md  PCA_Analysic.md  Q1.ipynb  Q1.py  Q10_resampler.py  Q11_flexible_inputs.py  Q12_sample_augmentation.py  Q13_nm_headers.py  Q14_workspace.py  Q15_jax_models.py  Q16_pytorch_models.py  Q17_nicon_comparison.py  Q18_pls_methods.py  Q18_stacking.py  Q19_pls_methods.py  Q19_pls_test.py  Q1_classif.py  Q1_classif_tf.py  Q1_finetune.py  Q1_groupsplit.py  Q1_regression.py  Q2.py  Q20B_analysis.py  Q20_analysis.py  Q21_feature_selection.py  Q22_concat_transform.py  Q23_generator_syntax.py  Q23b_generator.py  Q25_complex_pipeline_pls.py  Q26_nested_or_preprocessing.py  Q27_transfer_analysis.py  Q28_sample_filtering.py  Q2B_force_group.py  Q2_groupsplit.py  Q2_multimodel.py  Q3.py  Q30_branching.py  Q32_export_bundle.py  Q33_retrain_transfer.py  Q34_aggregation.py  (+88 more)
fake_workspace/: store.duckdb
nirs4all/: __init__.py  runtime.py
paper/: main.tex  main_rewritten.tex  references.bib
paper_aom/: README.md  arxiv_submission.md  cover_letter_talanta.md  main.aux  main.blg  main.out  main.tex  supplement.aux  supplement.blg  supplement.out  supplement.tex  supplement.toc
public/: component-library.json  nirs4all_logo.pptx
scripts/: bench_engine_perf.py  check_doc_metadata.py  check_example_refs.py  clear_cache.ps1  codemod_inline_pipeline.py  gc_artifacts.py  generate_clean_runner.py  generate_component_library.py  generate_init.py  lint_inline_pipeline.py  pre-publish.ps1  pre-publish.sh  prove_installed_n4m.py  sync_conda_recipe.py  update_conda_sha.sh
tests/: README.md  REORGANIZATION_STATUS.md  __init__.py  conftest.py  run_finetuning_tests.py  run_runner_tests.py  run_tests.py  test_binary_loader.py  test_dataset.py  test_finetuning_focused.py  test_finetuning_strategies.py  test_group_split.py  test_indexer.py  test_logging.py  test_manifest_manager.py  test_model_folds.py  test_phase2_integration.py  test_pipeline_serialization.py  test_serializer.py  test_simplified_controller.py  test_ui_templates_serving.py  test_utils.py
ui_templates/: analysis.html  dashboard.html  index.html  pipeline.html  predictions.html  workspace.html
webapp/: analysis.html  dashboard.html  index.html  pipeline.html  predictions.html  workspace.html
webapp_mockup/: index.html
webapp_react/: index.html  workspace.html
(+3761 files in other folders)
