[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nirs4all"
# Version is single-sourced from nirs4all/__init__.py (__version__); see
# [tool.setuptools.dynamic] below. Keep the literal only there.
dynamic = ["version"]
description = "A comprehensive Python library for Near-Infrared Spectroscopy (NIRS) data analysis with ML/DL pipelines."
authors = [
    { name = "Gregory Beurier", email = "beurier@cirad.fr" },
    { name = "Denis Cornet", email = "denis.cornet@cirad.fr" },
    { name = "Lauriane Rouan", email = "lauriane.rouan@cirad.fr" }
]
readme = "README.md"
license = { text = "CeCILL-2.1 OR AGPL-3.0-or-later" }

maintainers = [
    { name = "Gregory Beurier", email = "gregory.beurier@cirad.fr" }
]

keywords = [
    "nirs",
    "near-infrared",
    "spectroscopy",
    "chemometrics",
    "machine-learning",
    "deep-learning",
    "preprocessing",
    "pls",
    "sklearn",
    "tensorflow",
    "pytorch",
    "jax"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Typing :: Typed",
]

requires-python = ">=3.11"
dependencies = [
    # Core scientific computing
    # numpy>=2.0: ikpls calls ndarray.std(..., mean=...), a kwarg added in
    # NumPy 2.0; an older numpy raises "_std() got an unexpected keyword 'mean'".
    "numpy>=2.0.0",
    # First releases of each that support NumPy 2.0, so an upgrade into an
    # existing env can't leave a numpy-1 build of them behind (see numpy note).
    "pandas>=2.2.2",
    "scipy>=1.13.0",
    "scikit-learn>=1.5.0",

    # Data processing
    "polars>=1.0.0",
    "pyarrow>=14.0.0",
    "h5py>=3.8.0",

    # Signal processing
    "PyWavelets>=1.4.0",
    "pybaselines>=1.2.1",

    # Optimization & hyperparameter tuning
    "optuna>=3.0.0",

    # Utilities
    "joblib>=1.2.0",
    "jsonschema>=4.17.0",
    "pyyaml>=6.0.0",
    "packaging>=23.0",
    "pydantic>=2.0.0",

    # NIRS-specific splitting methods
    "kennard-stone>=2.2.0",

    # Advanced PLS variants
    "ikpls>=1.1.0",
    "pyopls>=20.0",
    "trendfitter>=0.0.6",

    # dag-ml execution core — the DEFAULT engine since the ADR-17 cutover (the
    # "nirs4all = the lite skeleton + Python controllers" North Star). A hard
    # dependency, not an extra: run() dispatches to dag-ml by default and falls
    # back to legacy with a warning only when the native backend is unavailable.
    "dag-ml>=0.2.1",
    "dag-ml-data>=0.2.1",
]

[project.optional-dependencies]
# Deep learning backends
tensorflow = ["tensorflow>=2.14.0"]
gpu = ["tensorflow[and-cuda]>=2.14.0"]
torch = ["torch>=2.1.0", "tabpfn>=2.0.0"]
keras = ["keras>=3.0.0"]
jax = ["jax>=0.4.20", "jaxlib>=0.4.20", "flax>=0.8.0"]

# Visualization (matplotlib-based plots, charts, pipeline diagrams)
viz = ["matplotlib>=3.7.0"]

# Model explainability: SHAP. The shap analysis module renders plots via
# matplotlib at import time, so `explain` carries it (otherwise nirs4all[explain]
# without [viz] fails on import). Also pulls numba + llvmlite transitively.
explain = ["shap>=0.42.0", "matplotlib>=3.7.0"]

# Legacy DuckDB workspace migration (only needed for pre-v0.9 workspaces)
migration = ["duckdb>=1.0.0"]

# AutoML
autogluon = ["autogluon>=1.0.0"]

# Complete installation with all ML frameworks
all = [
    "tensorflow>=2.14.0",
    "torch>=2.1.0",
    "keras>=3.0.0",
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "flax>=0.8.0",
    "matplotlib>=3.7.0",
    "shap>=0.42.0",
]

# Complete installation with GPU support
all-gpu = [
    "tensorflow[and-cuda]>=2.14.0",
    "torch>=2.1.0",
    "keras>=3.0.0",
    "jax[cuda12]>=0.4.20",
    "jaxlib>=0.4.20",
    "flax>=0.8.0",
    "matplotlib>=3.7.0",
    "shap>=0.42.0",
]

# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "pytest-timeout>=2.2.0",
    "pytest-benchmark>=4.0.0",
    "build>=1.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    # tests/conftest.py imports matplotlib unconditionally (sets the Agg backend
    # for the whole suite), so it is required for ANY test collection — not just
    # the viz/explain paths. Carried here so `pip install -e .[dev]` yields a
    # collectable test tree.
    "matplotlib>=3.7.0",
]

# Documentation
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0.0",
    "sphinx-copybutton>=0.5.0",
    "sphinx-design>=0.5.0",
    "sphinxcontrib-mermaid",
    "sphinxext-opengraph>=0.9.0",
]

# Report generation
reports = [
    "pypandoc>=1.12",
    "PyPDF2>=3.0.0",
    "pdf2image>=1.16.0"
]

[project.scripts]
nirs4all = "nirs4all.cli.main:main"

[project.urls]
Homepage = "https://github.com/GBeurier/nirs4all"
Documentation = "https://nirs4all.readthedocs.io"
Repository = "https://github.com/GBeurier/nirs4all"
Issues = "https://github.com/GBeurier/nirs4all/issues"
Changelog = "https://github.com/GBeurier/nirs4all/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["nirs4all*"]

[tool.setuptools.package-data]
nirs4all = ["py.typed"]

[tool.setuptools.dynamic]
version = { attr = "nirs4all.__version__" }

# Ruff configuration (replaces flake8 + pylint for linting)
[tool.ruff]
line-length = 220
target-version = "py311"
extend-exclude = ["bench", "examples/exports", "examples/workspace", "nirs4all/operators/models/_aom_nirs"]  # _aom_nirs: vendored AOM paper code pending replacement — carved out of the gate (debt audit 2026-06-04)

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E402", "F841", "F401", "E302", "E305", "W293", "E501", "SIM108"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403", "F405"]
"tests/*" = ["B", "SIM"]

# Pytest configuration (single source of truth — no separate pytest.ini)
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "sklearn: sklearn-only tests",
    "tensorflow: TensorFlow tests",
    "torch: PyTorch tests",
    "keras: tests that require Keras",
    "jax: JAX tests",
    "slow: slow running tests",
    "gpu: GPU-requiring tests",
    "stress: memory stress tests (slow, excluded from fast CI)",
    "parity: dag-ml migration parity oracle (legacy gold baseline + future dual-run)",
    "bench: performance benchmarks (legacy vs dag-ml; nightly, not a fast-CI gate)",
    "methods: tests requiring the nirs4all-methods / n4m native binding",
    "xdist_group(name): mark test to run in a named group for sequential execution with pytest-xdist",
]

# Coverage configuration
[tool.coverage.run]
source = ["nirs4all"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

# MyPy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = ["bench", "build", "\\.venv", "docs/_build", "nirs4all/operators/models/_aom_nirs/"]  # vendored AOM paper code pending replacement (debt audit 2026-06-04)

# Vendored AOM paper code pending replacement — not type-checked to library standard (debt audit 2026-06-04).
# `exclude` alone is insufficient because non-aom modules import from it; ignore_errors stops mypy following those imports into aom.
[[tool.mypy.overrides]]
module = "nirs4all.operators.models._aom_nirs.*"
ignore_errors = true

# Legacy tool configuration (for compatibility)
[tool.pylint.'MESSAGES CONTROL']
disable = ["invalid-name", "trailing-whitespace", "line-too-long", "import-outside-toplevel"]

[tool.pylint.'FORMAT']
max-line-length = 220

[tool.nirs4all]
product_owner = { name = "Denis Cornet", email = "denis.cornet@cirad.fr" }
contributors = [
    { name = "Denis Cornet" },
    { name = "Lauriane Rouan" }
]
